--- a/example/react/android/variables.gradle
+++ b/example/react/android/variables.gradle
@@ -13,5 +13,6 @@ ext {
     androidxJunitVersion = '1.1.5'
     androidxEspressoCoreVersion = '3.5.1'
     cordovaAndroidVersion = '10.1.1'
+    playServicesLocationVersion = "21.3.0"
     removeBackgroundGeolocationDebugSoundsInRelease = true
 }
