--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@transistorsoft/capacitor-background-geolocation",
-  "version": "6.1.5",
+  "version": "7.0.0",
   "description": "The most sophisticated cross platform Capacitor background location tracking & geofencing module with battery-conscious motion-detection intelligence",
   "main": "dist/plugin.cjs.js",
   "module": "dist/index.js",
@@ -49,33 +49,34 @@
     "eslint": "eslint . --ext ts",
     "prettier": "prettier \"**/*.{css,html,ts,js,java}\"",
     "swiftlint": "node-swiftlint",
-    "build": "npm run clean && tsc && rollup -c rollup.config.js",
+    "build": "npm run clean && tsc && rollup -c rollup.config.mjs",
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": ""
   },
   "dependencies": {
-    "@transistorsoft/capacitor-background-fetch": "^6.0.0"
+    "@transistorsoft/capacitor-background-fetch": "^7.0.0"
   },
   "devDependencies": {
-    "@capacitor/android": "^6.0.0",
-    "@capacitor/core": "^6.0.0",
-    "@capacitor/ios": "^6.0.0",
-    "@ionic/eslint-config": "^0.3.0",
-    "@ionic/prettier-config": "^1.0.1",
-    "@ionic/swiftlint-config": "^1.1.2",
-    "@rollup/plugin-commonjs": "^19.0.0",
+    "@capacitor/android": "^7.0.0",
+    "@capacitor/core": "^7.0.0",
+    "@capacitor/docgen": "^0.3.0",
+    "@capacitor/ios": "^7.0.0",
+    "@ionic/eslint-config": "^0.4.0",
+    "@ionic/prettier-config": "^4.0.0",
+    "@ionic/swiftlint-config": "^2.0.0",
     "@transistorsoft/typedoc-theme": "^2.0.9",
     "chalk": "^4.1.0",
-    "eslint": "^7.11.0",
+    "eslint": "^8.57.0",
     "fs-extra": "^9.1.0",
-    "prettier": "~2.2.0",
-    "prettier-plugin-java": "~1.0.0",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.32.0",
-    "rollup-plugin-copy": "^3.4.0",
-    "swiftlint": "^1.0.1",
-    "typescript": "~4.0.3"
+    "prettier": "^3.4.2",
+    "prettier-plugin-java": "^2.6.6",
+    "rimraf": "^5.0.10",
+    "rollup": "^4.30.1",
+    "@rollup/plugin-commonjs": "^28.0.2",
+    "rollup-plugin-copy": "^3.5.0",
+    "swiftlint": "^2.0.0",
+    "typescript": "~4.1.5"
   },
   "peerDependencies": {
     "@capacitor/core": "^6.0.0"
